--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "@inertiajs/inertia": "^0.10.1",
         "@inertiajs/inertia-vue": "^0.7.2",
         "@inertiajs/progress": "^0.2.6",
-        "vue": "^2.6.14"
+        "@mdi/font": "^6.5.95",
+        "vue": "^2.6.14",
+        "vue-moment": "^4.1.0"
     }
 }
