--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,18 @@
-APP_NAME=Laravel
+APP_NAME=OpenJuke
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+
+WWWGROUP=1000
+WWWUSER=1000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=openjuke_server
 DB_USERNAME=root
