--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/framework": "^8.65",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "tightenco/ziggy": "^1.4"
+        "tightenco/ziggy": "^1.4",
+      "ext-gd": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
